--- a/src/_html/_base/_includes/_city_header-blog.html
+++ b/src/_html/_base/_includes/_city_header-blog.html
@@ -1,6 +1,6 @@
 <div class="container-fluid city_header">
     <div class="container menu">
-        <h2>How it works</h2>
+        <h2>Blog</h2>
         <ul class="nav nav-pills">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="../../../index.html">Home</a>
@@ -16,7 +16,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link actives" href="../../../pages_howit.html">How it works</a>
+              <a class="nav-link actives" href="../../../blog.html">Blog</a>
             </li>
           </ul>
     </div>
