--- a/src/_html/_base/_includes/_footer.html
+++ b/src/_html/_base/_includes/_footer.html
@@ -4,12 +4,12 @@
         <nav>
             <ul type="none">
                 <li><a href="../../../index.html">home</a></li>
-                <li>about us</li>
+                <li><a href="../../../blog.html">about us</a></li>
                 <li>order now</li>
                 <li>disclaimer</li>
                 <li>why us</li>
                 <li>contacts</li>
-                <li>blog</li>
+                <li><a href="../../../blog.html">blog</a></li>
             </ul>
         </nav>
         <hr>
