--- a/src/_html/_base/_includes/_city_header-help.html
+++ b/src/_html/_base/_includes/_city_header-help.html
@@ -9,8 +9,8 @@
               <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="../../../pages_howit.html">How it works</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Essay help</a></li>
+                <li><a class="dropdown-item" href="../../../blog.html">Blog</a></li>
+                <li><a class="dropdown-item" href="../../../help.html">Essay help</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="../../../error.html">Error</a></li>
               </ul>
