--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -11,7 +11,7 @@
                       <li><a class="dropdown-item" href="../../../help.html">Essay help</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="../../../error.html">Error</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -19,7 +19,7 @@
                         about us
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="../../../blog.html">Blog</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -38,7 +38,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                   <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../pages_howit.html">How it works</a></button></li>
-                  <li><button class="dropdown-item" type="button">Another action</button></li>
+                  <li><button class="dropdown-item" type="button">Blog</button></li>
                   <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../error.html">Error</a></button></li>
                 </ul>
               </div>
