--- a/src/_html/_base/_includes/_blog_pages1.html
+++ b/src/_html/_base/_includes/_blog_pages1.html
@@ -1,10 +1,10 @@
-<div class="container-fluid blog">
+<div class="container-fluid blog_pages2">
     <div class="container">
         <div class="row">
             <div class="col-8">
-                <ul class="nav">
+                <ul class="nav blog">
                     <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="../../../blog_pages1.html">Latest</a>
+                      <a class="nav-link active" aria-current="page" href="../../../blog_pages1.html">Latest</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="../../../blog_pages2.html">Tabname2</a>
@@ -13,99 +13,116 @@
                       <a class="nav-link" href="../../../blog_pages3.html">Tabname3</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../../../blog.html">Show all</a>
+                        <a class="nav-link" href="../../../blog.html">Show all</a>
                     </li>
                 </ul>
                 <div class="progress" style="height: 3px;">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><a href="#"></a></div>
+                    <div class="progress-bar" role="progressbar" style="width: 15%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><a href="#"></a></div>
                 </div>
-                <div class="row">
-                    <div class="col-2 blog-link">
-                        <a class="facebook" href="#"><img src="../../../assets/img/facebook-hover.png" alt=""></a>
-                        <a class="twitter" href="#"><img src="../../../assets/img/twitter-hover.png" alt=""></a>
-                        <a class="pinterest" href="#"><img src="../../../assets/img/pinterest-hover.png" alt=""></a>
-                        <a class="google-plus" href="#"><img src="../../../assets/img/google-plus-hover.png" alt=""></a>
-                        <div class="heart">
-                            <i class="bi bi-heart-fill"></i>
-                            <p>34</p>
-                        </div>
-                        <div class="eye">
-                            <i class="bi bi-eye-fill"></i>
-                            <p>39</p>
-                        </div>
-                    </div>
-                    <div class="col-10 blog-text">
-                        <h2>Do you need essay help?</h2>
-                        <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
-                        <img src="../../../assets/img/woman-phone.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages1.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-2 blog-link">
-                        <a class="facebook" href="#"><img src="../../../assets/img/facebook-hover.png" alt=""></a>
-                        <a class="twitter" href="#"><img src="../../../assets/img/twitter-hover.png" alt=""></a>
-                        <a class="pinterest" href="#"><img src="../../../assets/img/pinterest-hover.png" alt=""></a>
-                        <a class="google-plus" href="#"><img src="../../../assets/img/google-plus-hover.png" alt=""></a>
-                        <div class="heart">
-                            <i class="bi bi-heart-fill"></i>
-                            <p class="counter">34</p>
-                        </div>
-                        <div class="eye">
-                            <i class="bi bi-eye-fill"></i>
-                            <p>39</p>
-                        </div>
-                    </div>
-                    <div class="col-10 blog-text">
-                        <h2>Do you need essay help?</h2>
-                        <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
-                        <img src="../../../assets/img/woman-phone2.png" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages2.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-2 blog-link">
-                        <a class="facebook" href="#"><img src="../../../assets/img/facebook-hover.png" alt=""></a>
-                        <a class="twitter" href="#"><img src="../../../assets/img/twitter-hover.png" alt=""></a>
-                        <a class="pinterest" href="#"><img src="../../../assets/img/pinterest-hover.png" alt=""></a>
-                        <a class="google-plus" href="#"><img src="../../../assets/img/google-plus-hover.png" alt=""></a>
-                        <div class="heart">
-                            <i class="bi bi-heart-fill"></i>
-                            <p>34</p>
-                        </div>
-                        <div class="eye">
-                            <i class="bi bi-eye-fill"></i>
-                            <p>39</p>
-                        </div>
-                    </div>
-                    <div class="col-10 blog-text">
-                        <h2>Do you need essay help?</h2>
-                        <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
-                        <img src="../../../assets/img/woman-phone3.avif" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages3.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
-                        <hr>
-                        <ul class="pagination">
-                            <li><a class="page-link" href="#" aria-label="Previous">
-                                <span aria-hidden="true"><i class="bi bi-caret-left"></i></span></a>
-                            </li>
-                            <li><a class="page-link active-pag" href="../../../blog_pages1.html">1</a></li>
-                            <li><a class="page-link" href="../../../blog_pages2.html">2</a></li>
-                            <li><a class="page-link" href="../../../blog_pages3.html">3</a></li>
-                            <li><a class="page-link" href="#">4</a></li>
-                            <li><a class="page-link" href="#">5</a></li>
-                            <li><a class="page-link" href="#">6</a></li>
-                            <li><a class="page-link" href="#">7</a></li>
-                            <li><a class="page-link" href="#">8</a></li>
-                            <li><a class="page-link" href="#">9</a></li>
-                            <li><a class="page-link" href="../../../blog_pages1.html" aria-label="Next">
-                                <span aria-hidden="true"><i class="bi bi-caret-right"></i></span></a>
-                            </li>
+                <img class="img-blog" src="../../../assets/img/woman-phone.jpg" alt="">
+                <div class="help">
+                    <h3>Do you need essay help?</h3>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam dolor ab facere veritatis fugiat ad voluptatibus consequatur assumenda accusantium sed aliquam cupiditate, maxime, vero nihil. Mollitia tenetur vel soluta sequi.</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, esse. Accusamus doloribus alias impedit commodi dolorum officiis praesentium, unde natus minus libero, odio cumque, pariatur aliquid! Temporibus magnam facere deleniti, eveniet rem doloribus! Libero, hic ex. Eum reprehenderit sequi vero repellat fuga id quam alias ipsam quisquam autem natus illo optio sapiente voluptatibus saepe possimus dicta earum delectus, in dolor error! Debitis ipsa dignissimos aliquid quam explicabo, aperiam molestias voluptas fugiat esse, quisquam perspiciatis praesentium sapiente vitae tenetur et assumenda. Tempore, maiores est quam delectus ullam explicabo, consequuntur eum natus numquam cumque reprehenderit deleniti quidem perferendis illo porro soluta facere.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla autem perferendis recusandae id. Debitis cupiditate eligendi error fugiat id itaque adipisci sint perspiciatis? Facere reiciendis at harum reprehenderit autem, quidem est eos nihil amet vitae totam in temporibus voluptatem. Molestiae dolore quam aperiam, ullam maxime ea culpa assumenda, aut adipisci ad alias autem voluptas fugiat nesciunt laboriosam amet quod consequuntur officia ipsa placeat neque dolores doloremque iure dolorem! Dolore mollitia quos dolores cumque quasi ab minus deserunt esse quod tenetur?</p>
+                    <div class="row list">
+                        <ul class="col-6 list1" type="none">
+                            <li> But I must explain to you how</li>
+                            <li>Mistaken idea of denouncing pleasure</li>
+                            <li>Praising pain was born</li>
+                            <li>Account of the system, and expound</li>
+                            <li>Great explorer of the truth</li>
+                            <li>No one rejects, dislikes</li>
+                        </ul>
+                        <ul class="col-6 list2" type="none">
+                            <li> But I must explain to you how</li>
+                            <li>Mistaken idea of denouncing pleasure</li>
+                            <li>Praising pain was born</li>
+                            <li>Account of the system, and expound</li>
+                            <li>Great explorer of the truth</li>
+                            <li>No one rejects, dislikes</li>
                         </ul>
                     </div>
+                    <h4>Do you need essay help?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, esse. Accusamus doloribus alias impedit commodi dolorum officiis praesentium, unde natus minus libero, odio cumque, pariatur aliquid! Temporibus magnam facere deleniti, eveniet rem doloribus! Libero, hic ex. Eum reprehenderit sequi vero repellat fuga id quam alias ipsam quisquam autem natus illo optio sapiente voluptatibus saepe possimus dicta earum delectus, in dolor error! Debitis ipsa dignissimos aliquid quam explicabo, aperiam molestias voluptas fugiat esse, quisquam perspiciatis praesentium sapiente vitae tenetur et assumenda. Tempore, maiores est quam delectus ullam explicabo, consequuntur eum natus numquam cumque reprehenderit deleniti quidem perferendis illo porro soluta facere.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla autem perferendis recusandae id. Debitis cupiditate eligendi error fugiat id itaque adipisci sint perspiciatis? Facere reiciendis at harum reprehenderit autem, quidem est eos nihil amet vitae totam in temporibus voluptatem. Molestiae dolore quam aperiam, ullam maxime ea culpa assumenda, aut adipisci ad alias autem voluptas fugiat nesciunt laboriosam amet quod consequuntur officia ipsa placeat neque dolores doloremque iure dolorem! Dolore mollitia quos dolores cumque quasi ab minus deserunt esse quod tenetur?</p>
+                    <div class="blue-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus veniam tempore, soluta sunt commodi ipsum adipisci illum esse, delectus accusantium saepe culpa? Aperiam, et consequuntur. Aliquid commodi, praesentium et ex deleniti dolorum delectus ad. Nam sint sit veritatis maxime consectetur?</p>
+                    </div>
+                    <h4>Do you need essay help?</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, esse. Accusamus doloribus alias impedit commodi dolorum officiis praesentium, unde natus minus libero, odio cumque, pariatur aliquid! Temporibus magnam facere deleniti, eveniet rem doloribus! Libero, hic ex. Eum voluptas fugiat esse, quisquam perspiciatis praesentium sapiente vitae tenetur et assumenda. Tempore, maiores est quam delectus ullam explicabo, consequuntur eum natus numquam cumque reprehenderit deleniti quidem perferendis illo porro soluta facere.</p>
+                    <h5>Do you need essay help?</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, esse. Accusamus doloribus alias impedit commodi dolorum officiis praesentium, unde natus minus libero, odio cumque, pariatur aliquid! Temporibus magnam facere deleniti, eveniet rem doloribus! Libero, hic ex. Eum voluptas fugiat esse, quisquam perspiciatis praesentium sapiente vitae tenetur et assumenda. Tempore, maiores est quam delectus ullam explicabo, consequuntur eum natus numquam cumque reprehenderit deleniti quidem perferendis illo porro soluta facere.</p>
+                    <h6>Do you need essay help?</h6>
+                    <div class="row">
+                        <div class="col-6">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam at neque nihil exercitationem eaque deleniti est quam harum voluptas molestiae? Alias autem molestias culpa! Temporibus pariatur, sapiente, quaerat explicabo eligendi et repudiandae recusandae possimus eius ipsam ullam nam nulla nemo praesentium deserunt earum voluptatum magni quae sed rerum illum, asperiores vel alias atque. Saepe dolorum fugit reiciendis obcaecati autem officia, alias possimus perferendis eaque repellat eos rem velit mollitia ullam?</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic saepe non minima quam, laboriosam molestias itaque dolorem impedit veniam quas nam magni atque fuga accusamus laborum quasi culpa beatae. Tempore totam optio nisi magnam atque repudiandae. Quibusdam animi porro, nesciunt excepturi atque vel molestias, officia minus perferendis nihil laboriosam dolorem similique corrupti iste voluptatibus sed harum, deleniti at eos illo rem commodi voluptate officiis. Officia iste velit odit quis iusto!</p>
+                        </div>
+                    </div>
                 </div>
+                <div class="row line-down">
+                    <div class="col-6 line-down-data">
+                        <p><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
+                        <div class="line-down-views">
+                            <i class="bi bi-heart-fill"></i>
+                            <p>34</p>
+                            <i class="bi bi-eye-fill"></i>
+                            <p>39</p>
+                        </div>
+                    </div>
+                    <div class="col-6 line-down-link">
+                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-pinterest"></i></a>
+                        <a href="#"><i class="bi bi-google"></i></a>
+                        <a href="#"><i class="bi bi-share-fill"></i></a>
+                    </div>
+                </div>
+                <h3>Leave comment</h3>
+                <form class="row g-3 needs-validation" novalidate>
+                    <div class="col-md-4">
+                        <label for="validationCustom01" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="validationCustom01" placeholder="Enter text" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustom02" class="form-label">Email</label>
+                        <input type="text" class="form-control" id="validationCustom02" placeholder="Enter text" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="validationCustomUsername" class="form-label">Phone</label>
+                        <div class="input-group has-validation">
+                            <input type="text" class="form-control" id="validationCustomUsername" placeholder="Enter text" aria-describedby="inputGroupPrepend" required>
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <label for="validationCustom03" class="form-label">Your comment</label>
+                        <input type="text" class="form-control" id="validationCustom03" placeholder="Enter text"  required>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary" type="submit">Post comment</button>
+                    </div>
+                </form>
+                <hr>
+                <ul class="pagination">
+                    <li><a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true"><i class="bi bi-caret-left"></i></span></a>
+                    </li>
+                    <li><a class="page-link" href="../../../blog_pages1.html">1</a></li>
+                    <li><a class="page-link active-pag" href="../../../blog_pages2.html">2</a></li>
+                    <li><a class="page-link" href="../../../blog_pages3.html">3</a></li>
+                    <li><a class="page-link" href="#">4</a></li>
+                    <li><a class="page-link" href="#">5</a></li>
+                    <li><a class="page-link" href="#">6</a></li>
+                    <li><a class="page-link" href="#">7</a></li>
+                    <li><a class="page-link" href="#">8</a></li>
+                    <li><a class="page-link" href="#">9</a></li>
+                    <li><a class="page-link" href="../../../blog_pages2.html" aria-label="Next">
+                        <span aria-hidden="true"><i class="bi bi-caret-right"></i></span></a>
+                    </li>
+                </ul>
             </div>
             <div class="col-4 pages_howit">
                 <div class="right-column">
