--- a/src/_html/_base/_includes/_header.html
+++ b/src/_html/_base/_includes/_header.html
@@ -9,8 +9,6 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="../../../help.html">Essay help</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="../../../error.html">Error</a></li>
                     </ul>
                 </li>
@@ -20,9 +18,10 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="../../../blog.html">Blog</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="../../../blog_pages1.html">Blog post 1</a></li>
+                      <li><a class="dropdown-item" href="../../../blog_pages2.html">Blog post 2</a></li>
+                      <li><a class="dropdown-item" href="../../../blog_pages3.html">Blog post 2</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -38,7 +37,8 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                   <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../pages_howit.html">How it works</a></button></li>
-                  <li><button class="dropdown-item" type="button">Blog</button></li>
+                  <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../blog.html">Blog</a></button></li>
+                  <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../blog.html">Essay help</a></button></li>
                   <li><button class="dropdown-item" type="button"><a style="text-decoration: none; color: #2f2d2d;" href="../../../error.html">Error</a></button></li>
                 </ul>
               </div>
