--- a/src/assets/css/_components/_blog.scss
+++ b/src/assets/css/_components/_blog.scss
@@ -1,5 +1,6 @@
 .blog{
     .nav-link{
+        margin-top: 10px;
         margin-left: 30px;
         font-size: 14px;
         line-height: 80px;
@@ -137,6 +138,7 @@
         }
         img{
             width: 100%;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
         }
         p{
             margin-top: 20px;
