--- a/src/assets/css/_components/_header.scss
+++ b/src/assets/css/_components/_header.scss
@@ -34,10 +34,10 @@ nav ul{
     cursor: pointer;
     &:hover{
         content: url(../../../assets/img/phone-hover.png);
-        animation: shake 0.5s ease-in-out;
+        animation: shake-phone 0.5s ease-in-out;
     }
 }
-@keyframes shake {
+@keyframes shake-phone {
     0% { transform: rotate(0deg); }
     25% { transform: rotate(10deg); }
     50% { transform: rotate(-10deg); }
