--- a/src/assets/css/_components/_pages_help.scss
+++ b/src/assets/css/_components/_pages_help.scss
@@ -38,7 +38,7 @@
                     content: "";
                     position: absolute;
                     left: -30px;
-                    top: 50%;
+                    top: 15px;
                     transform: translateY(-50%);
                     width: 16px;
                     height: 16px;
@@ -56,7 +56,7 @@
                     content: "";
                     position: absolute;
                     left: -30px;
-                    top: 50%;
+                    top: 5px;
                     transform: translateY(-50%);
                     width: 16px;
                     height: 16px;
