--- a/src/_html/_base/_includes/_welcome.html
+++ b/src/_html/_base/_includes/_welcome.html
@@ -1,10 +1,10 @@
 <div class="container-fluid welcome">
     <div class="container">
         <div class="row">
-            <div class="col-5">
+            <div class="col-lg-6 col-12">
                 <img src="../../../assets/img/01-img.png" alt="">
             </div>
-            <div class="col-7">
+            <div class="col-lg-6 col-12 welcome-text">
                 <h6>01  Welcome to Sitename</h6>
                 <h2>Do you need essay help from a good writing service?</h2>
                 <p>If you need to buy papers or custom essays, you have arrived at the ideal place! We offer guarantees that any essay work provided by our professional writing services will be entirely free of plagiarism and 100% freshly written. At BestEssayService.net, we make sure our customers are fully satisfied every time they use our custom term paper writing service.
