--- a/src/assets/css/_components/_discounts.scss
+++ b/src/assets/css/_components/_discounts.scss
@@ -1,11 +1,52 @@
 .discounts{
     background-color: $bg-color-blue;
-    background-image: url(../../../assets/img/04-bg.png);
+    background-image: url(../../../assets/img/04-bg1.png);
     background-repeat: repeat-x;
     background-position: center;
     height: 600px;
     position: relative;
-    
+    animation: moveBackground 25s linear infinite;
+    @keyframes moveBackground {
+        0% {
+            background-position: 0 bottom;
+        }
+        100% {
+            background-position: 100% bottom;
+        }
+    }
+    @media screen and (max-width: 768px){
+        height: 100%;
+    }
+    .raketa-bg{
+        position: absolute;
+        bottom: 50px;
+        left: 50px;
+        z-index: 1;
+        width: 150px;
+        animation: rocketFlight 5s infinite ease-in-out;
+        @keyframes rocketFlight {
+            0% {
+                transform: translate(0, 0) rotate(0deg);
+                opacity: 1;
+            }
+            25% {
+                transform: translate(100px, -200px) rotate(40deg);
+                opacity: 1; 
+            }
+            50% {
+                transform: translate(600px, -500px);
+                opacity: 1; 
+            }
+            75% {
+                transform: translate(900px, -800px) rotate(135deg);
+                opacity: 0; 
+            }
+            100% {
+                transform: translate(0, 0) rotate(0deg);
+                opacity: 0; 
+            }
+        }
+    }
     h6{
         font-size: $h6-font-size;
         color: #ffffff;
@@ -94,9 +135,19 @@
             padding: 30px;
             .dashed{
                 border-radius: 20px;
-                border: 3px dashed #0287c3;
+                border: 3px dashed #ffffff;
                 padding: 30px;
                 position: relative;
+                background-image: url(../../../assets/img/star-sky.jpg);
+                animation: moveBackgroundDashed 60s infinite linear;
+                @keyframes moveBackgroundDashed {
+                    0% {
+                        background-position: 0 0;
+                    }
+                    100% {
+                        background-position: 100% 100%;
+                    }
+                }
                 h4{
                     font-size: 25px;
                     letter-spacing: 0px;
@@ -104,7 +155,7 @@
                     text-transform: uppercase;
                     color: #ffffff;
                     font-weight: 600;
-                    font-family: "Poppins";
+                    font-family: "Poppins-Medium";
                     text-align: center;
                     margin-bottom: 30px;
                 }
@@ -112,6 +163,19 @@
                     position: absolute;
                     top: 150px;
                     left: 20px;
+                    animation: cutEffect 0.5s infinite linear;                    
+                    @keyframes cutEffect {
+                        0%, 100% {
+                            transform: rotate(0deg);
+                        }
+                        50% {
+                            transform: rotate(30deg);
+                        }
+                    }
+                    @media screen and (max-width: 992px){
+                        top: 180px;
+                        left: 25px;
+                    }
                 }
                 .scissors-text{
                     border: 3px dashed #ffffff;
@@ -122,6 +186,17 @@
                         position: absolute;
                         top: 140px;
                         right: 30px;
+                        animation: starPulse 3s infinite ease-in-out;
+                        @keyframes starPulse {
+                            0%, 100% {
+                                transform: scale(1);
+                                opacity: 0.8; 
+                            }
+                            50% {
+                                transform: scale(1.2);
+                                opacity: 1; 
+                            }
+                        }
                     }
 
                     .get{
@@ -130,7 +205,7 @@
                         line-height: 40px;
                         color: #ffffff;
                         font-weight: 500;
-                        font-family: Poppins-Medium;
+                        font-family: "Poppins-Medium";
                         text-align: left;
                         margin-left: 50px;
                         margin-top: 20px;
@@ -139,7 +214,7 @@
                         font-size: 62px;
                         line-height: 57px;
                         color: #e2f55d;
-                        font-family: Poppins-Bold;
+                        font-family: "Poppins-Bold";
                         text-align: center;
                         text-transform: uppercase;
                         margin-top: -10px;
@@ -149,7 +224,7 @@
                         line-height: 22px;
                         color: #ffffff;
                         font-weight: 500;
-                        font-family: Poppins-Regular;
+                        font-family: "Poppins-Regular";
                         text-align: center;
                         margin-top: -10px;
                         margin-bottom: 20px;
@@ -159,6 +234,15 @@
                     position: absolute;
                     bottom: -5px;
                     right: -65px;
+                    animation: balloonFloat 4s infinite ease-in-out;
+                    @keyframes balloonFloat {
+                        0%, 100% {
+                            transform: translateY(0);
+                        }
+                        50% {
+                            transform: translateY(-20px); 
+                        }
+                    }
                 }
                 .out-text{
                     font-size: 18px;
@@ -167,12 +251,51 @@
                     color: #ffffff;
                     font-weight: 400;
                     font-style: italic;
-                    font-family: OpenSans-Italic;
+                    font-family: "OpenSans-Italic";
                     text-align: center;
                     margin-top: 40px;
                     margin-bottom: 10px;
                 }
             }
+        }
+    }
+    @media screen and (max-width: 992px){
+        .discount-blocks{
+            width: 800px;
+        }
+        .raketa-bg{
+            animation: rocketFlight 5s infinite ease-in-out;
+            @keyframes rocketFlight {
+                0% {
+                    transform: translate(0, 0) rotate(0deg);
+                    opacity: 1;
+                }
+                25% {
+                    transform: translate(100px, -200px) rotate(40deg);
+                    opacity: 1; 
+                }
+                50% {
+                    transform: translate(500px, -400px);
+                    opacity: 1; 
+                }
+                75% {
+                    opacity: 0; 
+                }
+                100% {
+                    transform: translate(0, 0) rotate(0deg);
+                    opacity: 0; 
+                }
+            }
+        }
+    }
+    @media screen and (max-width: 768px){
+        .discount-blocks{
+            width: 100%;
+            position: relative;
+            margin-top: 500px;
+        }
+        .raketa-bg{
+            display: none;
         }
     }
 }
