--- a/src/_html/_base/_includes/_advantages.html
+++ b/src/_html/_base/_includes/_advantages.html
@@ -3,17 +3,17 @@
         <h6>02  Our advantages</h6>
         <h2>Advantages of Our Writing Services</h2>
         <div class="row main-block">
-            <div class="col-4 white-block">
+            <div class="col-xl-4 col-lg-1 white-block">
                 <img src="../../../assets/img/02-img-1.png" alt="">
                 <h3>Professionally-qualified  writing experts</h3>
                 <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born</p>
             </div>
-            <div class="col-4 white-block">
+            <div class="col-xl-4 col-lg-6 white-block">
                 <img src="../../../assets/img/02-img-2.png" alt="">
                 <h3>Commitment to deliver papers by deadline</h3>
                 <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born</p>
             </div>
-            <div class="col-4 white-block">
+            <div class="col-xl-4 col-lg-5 white-block">
                 <img src="../../../assets/img/02-img-3.png" alt="">
                 <h3>Top-quality, at a great price - guaranteed</h3>
                 <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born</p>
