--- a/src/_html/_base/_includes/_discounts.html
+++ b/src/_html/_base/_includes/_discounts.html
@@ -1,10 +1,11 @@
 <div class="discounts container-fluid">
+    <img class="raketa-bg" src="../../../assets/img/03-img-41.png" alt="">
     <div class="container">
         <h6>04  Discounts</h6>
         <h2>Our discount program</h2>
         <p class="text">By utilizing elements and principles of Material Design, we were <br> able to create a framework that incorporates</p>
-        <div class="row discount-blocks">
-            <div class="col-7 first-block">
+        <div class="row discount-blocks d-md-flex d-none">
+            <div class="col-md-7 first-block">
                 <table>
                     <tr>
                         <td><h4>4% <br> OFF</h4><p>for more than <br> <span>15 pages</span></p></td>
@@ -16,7 +17,35 @@
                     </tr>
                 </table>
             </div>
-            <div class="col-5 second-block">
+            <div class="col-md-5 second-block">
+                <div class="dashed">
+                    <h4>Try our service & get huge discounts</h4>
+                    <img class="scissors" src="../../../assets/img/scissors.png" alt="">
+                    <div class="scissors-text">
+                        <img class="stars" src="../../../assets/img/stars.png" alt="">
+                        <p class="get">get</p>
+                        <p class="prozent">15 % off</p>
+                        <p class="under">for your 1st order</p>
+                    </div>
+                    <img class="balloon" src="../../../assets/img/balloon.png" alt="">
+                    <p class="out-text">Use discount15 as discount code</p>
+                </div>
+            </div>
+        </div>
+        <div class="row discount-blocks d-md-none d-flex">
+            <div class="col-xs-12 first-block">
+                <table>
+                    <tr>
+                        <td><h4>4% <br> OFF</h4><p>for more than <br> <span>15 pages</span></p></td>
+                        <td><h4>5% <br> OFF</h4><p>for more than <br> <span>20 pages</span></p></td>
+                    </tr>
+                    <tr>
+                        <td><h4>10% <br> OFF</h4><p>for more than <br> <span>50 pages</span></p></td>
+                        <td><h4>15% <br> OFF</h4><p>for more than <br> <span>100 pages</span></p></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-xs-12 second-block">
                 <div class="dashed">
                     <h4>Try our service & get huge discounts</h4>
                     <img class="scissors" src="../../../assets/img/scissors.png" alt="">
