--- a/src/_html/_base/_includes/_howit.html
+++ b/src/_html/_base/_includes/_howit.html
@@ -3,25 +3,25 @@
         <h6>03  How it works</h6>
         <h2>Our Simple 4-Step Procedure</h2>
         <div class="row steps">
-            <div class="col-3 step">
+            <div class="col-lg-3 col-sm-6 col-12 step">
                 <img src="../../../assets/img/03-img-1.png" alt="">
                 <h3>step 1</h3>
                 <p>Complete the short order form to buy a paper from our easy essay writing service.</p>
                 <img class="arrow_step" src="../../../assets/img/arrow_ourSimple.png" alt="">
             </div>
-            <div class="col-3 step">
+            <div class="col-lg-3 col-sm-6 col-12 step">
                 <img src="../../../assets/img/03-img-2.png" alt="">
                 <h3>step 2</h3>
                 <p>We allocate your order to a suitably-qualified writer with specialist knowledge in, for example, persuasive essay writing if that is what you want.</p>
-                <img class="arrow_step" src="../../../assets/img/arrow_ourSimple.png" alt="">
+                <img class="arrow_step arrow_step2" src="../../../assets/img/arrow_ourSimple.png" alt="">
             </div>
-            <div class="col-3 step">
+            <div class="col-lg-3 col-sm-6 col-12 step">
                 <img src="../../../assets/img/03-img-3.png" alt="">
                 <h3>step 3</h3>
                 <p>Our Quality Assurance specialists then check the completed paper to ensure the essay writing is of the highest standard</p>
                 <img class="arrow_step" src="../../../assets/img/arrow_ourSimple.png" alt="">
             </div>
-            <div class="col-3 step">
+            <div class="col-lg-3 col-sm-6 col-12 step">
                 <img src="../../../assets/img/03-img-4.png" alt="">
                 <h3>step 4</h3>
                 <p>The order you placed with our essay writing service is then sent to you before the deadline you set and is accompanied by several free-of-charge features.</p>
