--- a/src/assets/css/_components/_advantages.scss
+++ b/src/assets/css/_components/_advantages.scss
@@ -5,6 +5,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    animation: gradientAnimation 5s infinite alternate;  
+    @keyframes gradientAnimation {
+        0% {
+            background-color: #03a9f4;
+        }
+        50% {
+            background-color: #0288d1;
+        }
+        100% {
+            background-color: #01579b;
+        }
+    }
     h6{
         font-size: $h6-font-size;
         color: #ffffff;
@@ -29,13 +41,25 @@
     }
     .white-block{
         width: 420px;
-        filter: drop-shadow(0px 4px 10px rgba(202,202,202,0.25));
+        box-shadow: 0 8px 20px rgba(70, 68, 68, 0.5);
         background-color: #ffffff;
         text-align: center;
         padding: 30px;
-        
+        border-radius: 5px;
         img{
             padding-top: 30px;
+            animation: spinAround 2s infinite;
+            @keyframes spinAround {
+                0% {
+                    transform: rotateY(0deg);
+                }
+                50% {
+                    transform: rotateY(180deg);
+                }
+                100% {
+                    transform: rotateY(360deg);
+                }
+            }
         }
         h3{
             font-size: 30px;
@@ -69,6 +93,27 @@
         margin: 50px;
         &:hover{
             background-color: $bg-btn1-hover;
+        }
+    }
+    @media screen and (max-width: 1400px){
+        .white-block{
+            width: 350px;
+        }
+    }
+    @media screen and (max-width: 1200px){
+        .white-block{
+            width: 300px;
+        }
+    }
+    @media screen and (max-width: 992px){
+        .white-block{
+            width: 100%;
+            margin-bottom: 20px;
+        }
+    }
+    @media screen and (max-width: 576px){
+        button{
+            width: 150px;
         }
     }
 }
