--- a/src/assets/css/_components/_welcome.scss
+++ b/src/assets/css/_components/_welcome.scss
@@ -1,25 +1,34 @@
 .welcome{
     margin-top: 100px;
     margin-bottom: 100px;
-}
-.welcome h6{
-    font-size: 16px;
-    color: #0287c3;
-    font-weight: 400;
-    font-family: "Poppins-Regular";
-}
-.welcome h2{
-    font-size: 40px;
-    color: #1e2021;
-    font-weight: 900;
-    font-family: "Poppins-Bold";
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.welcome p{
-    font-size: 20px;
-    line-height: 22px;
-    color: $p-color;
-    font-weight: 400;
-    font-family: "Poppins-Regular";
+    img{
+        width: 100%;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+    }
+    h6{
+        font-size: 16px;
+        color: #0287c3;
+        font-weight: 400;
+        font-family: "Poppins-Regular";
+    }
+    h2{
+        font-size: 40px;
+        color: #1e2021;
+        font-weight: 900;
+        font-family: "Poppins-Bold";
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    p{
+        font-size: 20px;
+        line-height: 22px;
+        color: $p-color;
+        font-weight: 400;
+        font-family: "Poppins-Regular";
+    }
+    @media screen and (max-width: 992px){
+        h6{
+            margin-top: 30px;
+        }
+    }
 }
